<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="15dp"
    app:cardElevation="3dp" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/current_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".CurrentDayFragment" >
        <TextView
            android:id="@+id/current_city_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_city"
            android:textSize="24sp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/current_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_day"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/current_city_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <LinearLayout
            android:id="@+id/linear_layout_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/current_day"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:id="@+id/current_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_temperature"
            android:layout_gravity="center_vertical|center_horizontal"
            android:textSize="36sp" />
        <ImageView
            android:id="@+id/current_temperature_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:src="@drawable/snow"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linear_layout_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/linear_layout_one"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <ImageView
                android:id="@+id/current_wind_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:src="@drawable/wind"/>
            <TextView
                android:id="@+id/current_wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_wind"
                android:layout_gravity="center_vertical|center_horizontal"/>
            <ImageView
                android:id="@+id/current_pressure_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:src="@drawable/pressure"/>
            <TextView
                android:id="@+id/current_pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_pressure"
                android:layout_gravity="center_vertical|center_horizontal"/>
            <ImageView
                android:id="@+id/current_humidity_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:src="@drawable/humidity"/>
            <TextView
                android:id="@+id/current_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_humidity"
                android:layout_gravity="center_vertical|center_horizontal"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>